--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -31,6 +31,13 @@
 /scripts @microsoft/fluentui-react-build
 /tools @microsoft/fluentui-react-build
 
+### TODO: remove - Temporary rules for /scripts packaging initiative
+just.config.ts @microsoft/fluentui-react-build
+jest.config.js @microsoft/fluentui-react-build
+tsconfig.json
+tsconfig.lib.json
+tsconfig.spec.json
+
 #### Root Build files
 /.eslintrc.* @microsoft/fluentui-react-build
 /.gitattributes @microsoft/fluentui-react-build
