--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "check:change": "beachball check",
     "check:modified-files": "node -r ./scripts/ts-node/register ./scripts/executors/check-for-modified-files",
     "check:affected-package": "node ./scripts/monorepo/checkIfPackagesAffected.js",
-    "check:installed-dependencies-versions": "satisfied --skip-invalid --ignore \"prettier|angular|lit|sass|@storybook/html|@storybook/mdx2-csf|svelte|@testing-library|vue|@cypress/react|cypress|@swc/wasm|@cactuslab/usepubsub\"",
+    "check:installed-dependencies-versions": "satisfied --skip-invalid --ignore \"prettier|angular|lit|sass|@storybook/html|@storybook/mdx2-csf|svelte|@testing-library|vue|@cypress/react|cypress|@swc/wasm|@cactuslab/usepubsub|react-vis\"",
     "clean": "lage clean --verbose",
     "code-style": "lage code-style --verbose",
     "codepen": "cd packages/react && node ../../scripts/executors/local-codepen.js",
@@ -67,19 +67,21 @@
     "@actions/core": "1.9.1",
     "@actions/github": "5.0.3",
     "@azure/data-tables": "13.0.0",
-    "@babel/core": "7.14.8",
-    "@babel/plugin-proposal-class-properties": "7.14.5",
-    "@babel/plugin-proposal-decorators": "7.14.5",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "7.14.5",
-    "@babel/plugin-proposal-optional-chaining": "7.14.5",
+    "@babel/core": "7.18.9",
+    "@babel/generator": "7.18.9",
+    "@babel/plugin-proposal-class-properties": "7.18.6",
+    "@babel/plugin-proposal-decorators": "7.18.9",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "7.18.6",
+    "@babel/plugin-proposal-optional-chaining": "7.18.9",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
     "@babel/plugin-syntax-object-rest-spread": "7.8.3",
-    "@babel/plugin-transform-runtime": "7.14.5",
-    "@babel/preset-env": "7.14.8",
-    "@babel/preset-react": "7.14.5",
-    "@babel/preset-typescript": "7.14.5",
-    "@babel/register": "7.14.5",
-    "@babel/standalone": "7.14.8",
+    "@babel/plugin-transform-runtime": "7.18.9",
+    "@babel/preset-env": "7.18.9",
+    "@babel/preset-react": "7.18.6",
+    "@babel/preset-typescript": "7.18.6",
+    "@babel/register": "7.18.9",
+    "@babel/standalone": "7.18.9",
+    "@babel/traverse": "7.18.9",
     "@cactuslab/usepubsub": "^1.0.2",
     "@ctrl/tinycolor": "3.3.4",
     "@cypress/react": "5.12.4",
@@ -91,8 +93,11 @@
     "@griffel/react": "^1.4.2",
     "@griffel/webpack-extraction-plugin": "0.2.1",
     "@griffel/webpack-loader": "2.1.3",
+    "@mdx-js/loader": "1.6.22",
     "@microsoft/api-extractor": "7.18.1",
     "@microsoft/eslint-plugin-sdl": "0.1.9",
+    "@microsoft/load-themed-styles": "1.10.26",
+    "@microsoft/loader-load-themed-styles": "1.7.205",
     "@nrwl/cli": "13.10.6",
     "@nrwl/devkit": "13.10.6",
     "@nrwl/jest": "13.10.6",
@@ -125,8 +130,10 @@
     "@testing-library/react-hooks": "7.0.2",
     "@testing-library/user-event": "13.5.0",
     "@tsconfig/node14": "1.0.3",
+    "@types/babel__core": "7.1.18",
     "@types/babel__helper-plugin-utils": "7.10.0",
     "@types/babel__register": "7.17.0",
+    "@types/babel__traverse": "7.18.3",
     "@types/chrome-remote-interface": "0.30.0",
     "@types/circular-dependency-plugin": "5.0.5",
     "@types/copy-webpack-plugin": "6.4.0",
@@ -149,9 +156,11 @@
     "@types/jest-axe": "3.5.3",
     "@types/jju": "1.4.1",
     "@types/json-schema": "^7.0.8",
+    "@types/lerna-alias": "3.0.0",
     "@types/lerna__package-graph": "5.1.0",
     "@types/lerna__project": "5.1.0",
     "@types/loader-utils": "2.0.3",
+    "@types/lodash": "4.14.182",
     "@types/markdown-table": "2.0.0",
     "@types/micromatch": "4.0.2",
     "@types/node": "14.18.32",
@@ -182,14 +191,19 @@
     "babel-jest": "26.6.3",
     "babel-loader": "8.2.2",
     "babel-plugin-annotate-pure-calls": "0.4.0",
+    "babel-plugin-annotate-pure-imports": "1.0.0-1",
+    "babel-plugin-iife-wrap-react-components": "1.0.0-5",
+    "babel-plugin-lodash": "3.3.4",
     "babel-plugin-tester": "10.1.0",
     "beachball": "2.31.0",
     "chalk": "4.1.0",
     "chrome-remote-interface": "0.28.2",
     "ci-info": "3.2.0",
     "circular-dependency-plugin": "5.2.2",
+    "clean-css": "4.2.3",
     "clean-webpack-plugin": "4.0.0",
     "cli-table3": "0.6.1",
+    "connect-history-api-fallback": "1.6.0",
     "copy-webpack-plugin": "8.1.0",
     "cross-env": "^5.1.4",
     "css-loader": "5.0.1",
@@ -199,6 +213,8 @@
     "danger": "^11.0.0",
     "dedent": "0.7.0",
     "del": "6.0.0",
+    "doctoc": "2.0.1",
+    "doctrine": "3.0.0",
     "dotparser": "1.1.1",
     "enhanced-resolve": "5.8.2",
     "enquirer": "2.3.6",
@@ -250,13 +266,21 @@
     "just-scripts": "1.8.2",
     "lage": "1.8.8",
     "lerna": "5.5.2",
+    "lerna-alias": "3.0.3-0",
+    "lerna-dependency-graph": "1.0.2",
+    "license-webpack-plugin": "2.3.10",
     "lint-staged": "10.2.10",
     "loader-utils": "2.0.4",
     "markdown-table": "2.0.0",
     "memfs": "3.2.2",
     "mini-css-extract-plugin": "2.6.1",
     "node-fetch": "2.6.7",
+    "node-plop": "0.25.0",
+    "node-polyfill-webpack-plugin": "1.0.2",
     "nx": "13.10.6",
+    "p-queue": "6.6.2",
+    "path-browserify": "1.0.1",
+    "plop": "2.6.0",
     "portfinder": "1.0.28",
     "postcss": "8.3.5",
     "postcss-loader": "4.1.0",
@@ -270,9 +294,15 @@
     "react": "17.0.2",
     "react-app-polyfill": "2.0.0",
     "react-dom": "17.0.2",
+    "react-hot-loader": "4.13.0",
     "react-is": "17.0.2",
     "react-test-renderer": "17.0.2",
+    "react-vis": "1.11.7",
+    "read-pkg-up": "7.0.1",
+    "replace-in-file": "6.1.0",
     "request-promise-native": "1.0.9",
+    "resolve": "1.22.0",
+    "riceburn": "1.3.1",
     "rollup": "2.45.2",
     "rollup-plugin-commonjs": "10.1.0",
     "rollup-plugin-filesize": "8.0.2",
@@ -341,8 +371,7 @@
     "@typescript-eslint/experimental-utils": "4.22.0",
     "@typescript-eslint/parser": "4.22.0",
     "@types/jest-axe/axe-core": "4.2.1",
-    "eslint": "7.25.0",
-    "requestretry": "7.0.0"
+    "eslint": "7.25.0"
   },
   "syncpack": {
     "prod": true,
@@ -364,11 +393,14 @@
         "dependencies": [
           "@babel/core",
           "@babel/preset-typescript",
+          "@babel/generator",
+          "@babel/traverse",
           "@rnx-kit/eslint-plugin",
           "@types/react-test-renderer",
           "@typescript-eslint/eslint-plugin",
           "@typescript-eslint/experimental-utils",
           "@typescript-eslint/parser",
+          "@microsoft/load-themed-styles",
           "ajv",
           "chalk",
           "cli-table3",
@@ -388,11 +420,14 @@
           "glob",
           "gzip-size",
           "jju",
+          "lerna-alias",
           "loader-utils",
           "pretty-bytes",
           "schema-utils",
           "react-is",
+          "react-hot-loader",
           "react-test-renderer",
+          "react-vis",
           "tslib",
           "terser",
           "terser-webpack-plugin",
