--- a/scripts/package.json
+++ b/scripts/package.json
@@ -10,37 +10,5 @@
   "devDependencies": {
     "@fluentui/eslint-plugin": "*"
   },
-  "dependencies": {
-    "@mdx-js/loader": "^1.5.5",
-    "@microsoft/load-themed-styles": "^1.10.26",
-    "@microsoft/loader-load-themed-styles": "^1.7.205",
-    "@types/babel__traverse": "^7.0.4",
-    "@types/inquirer": "^6.5.0",
-    "@types/lerna-alias": "^3.0.0",
-    "@types/lodash": "^4.14.149",
-    "@types/read-pkg-up": "^6.0.0",
-    "async": "^2.6.1",
-    "babel-plugin-annotate-pure-imports": "^1.0.0-1",
-    "babel-plugin-iife-wrap-react-components": "^1.0.0-5",
-    "babel-plugin-lodash": "^3.3.4",
-    "clean-css": "^4.2.3",
-    "connect-history-api-fallback": "^1.3.0",
-    "doctoc": "^2.0.1",
-    "doctrine": "^3.0.0",
-    "inquirer": "^7.3.3",
-    "lerna-alias": "^3.0.3-0",
-    "lerna-dependency-graph": "^1.0.2",
-    "license-webpack-plugin": "^2.3.10",
-    "node-plop": "^0.25.0",
-    "node-polyfill-webpack-plugin": "^1.0.2",
-    "p-queue": "^6.0.2",
-    "path-browserify": "^1.0.1",
-    "plop": "^2.6.0",
-    "react-hot-loader": "^4.13.0",
-    "react-vis": "^1.11.6",
-    "read-pkg-up": "^7.0.1",
-    "replace-in-file": "^6.1.0",
-    "resolve": "^1.7.1",
-    "riceburn": "^1.3.1"
-  }
+  "dependencies": {}
 }
