chore: make temproary owner rules work with globs (#26123)

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -32,11 +32,12 @@
 /tools @microsoft/fluentui-react-build
 
 ### TODO: remove - Temporary rules for /scripts packaging initiative
-just.config.ts @microsoft/fluentui-react-build
-jest.config.js @microsoft/fluentui-react-build
-tsconfig.json
-tsconfig.lib.json
-tsconfig.spec.json
+**/just.config.ts @microsoft/fluentui-react-build
+**/jest.config.js @microsoft/fluentui-react-build
+**/tsconfig.json @microsoft/fluentui-react-build
+**/tsconfig.lib.json @microsoft/fluentui-react-build
+**/tsconfig.spec.json @microsoft/fluentui-react-build
+**/package.json @microsoft/fluentui-react-build
 
 #### Root Build files
 /.eslintrc.* @microsoft/fluentui-react-build
