chore: fix webpack pattern typo (#26155)

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -242,7 +242,7 @@ packages/react-experiments/src/components/TileList @ThomasMichon
 ### TODO: remove - Temporary rules for /scripts packaging initiative
 **/just.config.ts @microsoft/fluentui-react-build
 **/jest.config.js @microsoft/fluentui-react-build
-**/wepback.*.js @microsoft/fluentui-react-build
+**/webpack.*.js @microsoft/fluentui-react-build
 **/.eslintrc.js @microsoft/fluentui-react-build
 **/.eslintrc.json @microsoft/fluentui-react-build
 **/tsconfig.json @microsoft/fluentui-react-build
