chore: introduce more barrel file apis within `/scripts`  (#26125)
* refactor: use only public api for scripts/project-test

* refactor: use only public api for scripts/dangerjs

* refactor(scripts): normalize /scripts/babel plugin

* refactor(scripts): normalize /scripts/cypress to use barrel api and remove react-fui v8 dependency

* generate change files

* refactor(scripts): move tagVnext to /executors to match domain boundary/purpose

* refactor(scripts): normalize /scripts/gulp to use barrel api

* refactor(scripts): move serve to /gulp/tasks to match domain boundary/purpose and prepare @scripts imports for packaging

* chore(scripts): remove reduntant fields from package.json

--- a/scripts/package.json
+++ b/scripts/package.json
@@ -3,12 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "code-style": "just-scripts code-style",
     "test": "jest",
     "type-check": "tsc -b tsconfig.json"
   },
-  "devDependencies": {
-    "@fluentui/eslint-plugin": "*"
-  },
+  "devDependencies": {},
   "dependencies": {}
 }
