chore(scripts): remove unnecessary gulp preset configuration (#26145)
* chore(scripts): remove unnecessary gulp preset configuration

* chore(northstar/docs): remove local path aliases

--- a/tsconfig.base.v0.json
+++ b/tsconfig.base.v0.json
@@ -18,6 +18,8 @@
     "typeRoots": ["node_modules/@types", "./typings"],
     "baseUrl": ".",
     "paths": {
+      "@fluentui/react-portal-compat-context": ["packages/react-components/react-portal-compat-context/src/index"],
+
       "@fluentui/a11y-testing": ["packages/a11y-testing/src/index.ts"],
       "@fluentui/ability-attributes": ["packages/fluentui/ability-attributes/src/index.ts"],
       "@fluentui/accessibility": ["packages/fluentui/accessibility/src/index.ts"],
