--- a/packages/react-components/react-tree/package.json
+++ b/packages/react-components/react-tree/package.json
@@ -35,6 +35,7 @@
     "@fluentui/react-shared-contexts": "^9.1.4",
     "@fluentui/react-aria": "^9.3.4",
     "@fluentui/react-tabster": "^9.3.5",
+    "@fluentui/react-portal": "^9.0.15",
     "@fluentui/keyboard-keys": "^9.0.1",
     "@fluentui/react-theme": "^9.1.5",
     "@fluentui/react-utilities": "^9.3.1",
