--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -34,6 +34,7 @@
       "@fluentui/react-conformance-griffel": ["packages/react-components/react-conformance-griffel/src/index.ts"],
       "@fluentui/react-context-selector": ["packages/react-components/react-context-selector/src/index.ts"],
       "@fluentui/react-data-grid-react-window": ["packages/react-components/react-data-grid-react-window/src/index.ts"],
+      "@fluentui/react-datepicker": ["packages/react-components/react-datepicker/src/index.ts"],
       "@fluentui/react-dialog": ["packages/react-components/react-dialog/src/index.ts"],
       "@fluentui/react-divider": ["packages/react-components/react-divider/src/index.ts"],
       "@fluentui/react-field": ["packages/react-components/react-field/src/index.ts"],
