chore(react-datepicker): Create Calendar components and DatePicker component (#26325)
* add Calendar components and DatePicker component

* fix lint error

* missed one

--- a/packages/react-components/react-datepicker/package.json
+++ b/packages/react-components/react-datepicker/package.json
@@ -20,7 +20,9 @@
     "lint": "just-scripts lint",
     "test": "jest --passWithNoTests",
     "type-check": "tsc -b tsconfig.json",
-    "generate-api": "tsc -p ./tsconfig.lib.json --emitDeclarationOnly && just-scripts api-extractor"
+    "generate-api": "tsc -p ./tsconfig.lib.json --emitDeclarationOnly && just-scripts api-extractor",
+    "storybook": "start-storybook",
+    "start": "yarn storybook"
   },
   "devDependencies": {
     "@fluentui/eslint-plugin": "*",
