--- a/packages/react-components/react-data-grid-react-window/package.json
+++ b/packages/react-components/react-data-grid-react-window/package.json
@@ -32,7 +32,7 @@
     "@fluentui/scripts-tasks": "*"
   },
   "dependencies": {
-    "@fluentui/react-table": "9.0.0-alpha.20",
+    "@fluentui/react-table": "9.0.0-rc.0",
     "@fluentui/react-utilities": "^9.4.0",
     "react-window": "^1.8.6",
     "tslib": "^2.1.0"
