--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -77,7 +77,8 @@
       "@fluentui/react-tree": ["packages/react-components/react-tree/src/index.ts"],
       "@fluentui/react-utilities": ["packages/react-components/react-utilities/src/index.ts"],
       "@fluentui/theme-designer": ["packages/react-components/theme-designer/src/index.ts"],
-      "@fluentui/tokens": ["packages/tokens/src/index.ts"]
+      "@fluentui/tokens": ["packages/tokens/src/index.ts"],
+      "@fluentui/react-virtualizer": ["packages/react-components/react-virtualizer/src/index.ts"]
     }
   },
   "exclude": ["node_modules"]
