feat: create migration shim packages for V0 (#26142)
* chore: create package

* chore: add api changes

* chore: remove ununsed initializeIcons

* chore: use as dev deps

* chore: fix version mismatch

* chore: use as deps

* chore: remove spec

* chore: add js docs

* chore: update lock

* chore: use V0 Input

* chore: update N* in the shims package

* chore: update package

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -206,6 +206,7 @@ packages/react-components/react-skeleton @microsoft/cxe-red
 packages/tokens @microsoft/teams-prg
 packages/react-components/react-tags @microsoft/cxe-coastal @TristanWatanabe
 packages/react-components/react-data-grid-react-window @microsoft/teams-prg
+packages/react-components/react-migration-v0-v9 @microsoft/teams-prg
 packages/react-components/react-datepicker @microsoft/cxe-red @sopranopillow @khmakoto
 # <%= NX-CODEOWNER-PLACEHOLDER %>
 
