feat: provide `launch` and `startServer` functions as single source of truth for creating new browser/server instance within monorepo (#26375)
* feat(scripts-pupeteer): provide launch function as single source of truth for creating new browser instance

* chore: bump puppeteer to v17

* refactor(scripts): make startServer generic and used everywhere

--- a/scripts/gulp/package.json
+++ b/scripts/gulp/package.json
@@ -15,6 +15,7 @@
     "@fluentui/scripts-utils": "*",
     "@fluentui/scripts-prettier": "*",
     "@fluentui/scripts-puppeteer": "*",
-    "@fluentui/scripts-babel": "*"
+    "@fluentui/scripts-babel": "*",
+    "@fluentui/scripts-projects-test": "*"
   }
 }
