chore: remove circular dependency within v0 and scripts/ and move e2e test to proper pipeline (#26410)
* chore(fluentui/e2e): make scripts task naming consistent and rename test to e2e

* refactor(fluent/perf): remove circular deps between scripts-gulp and fluent-perf and scope related tooling to the perf package

* chore(scripts): copy parseDocblock to northstar conformance test to avoid compiling tooling code within current v0 tsc setup

--- a/packages/fluentui/e2e/package.json
+++ b/packages/fluentui/e2e/package.json
@@ -23,9 +23,9 @@
     "access": "public"
   },
   "scripts": {
-    "test": "gulp test",
-    "serve": "gulp serve",
-    "test:local": "cypress open --config baseUrl=http://localhost:8082",
+    "serve": "gulp test:e2e:serve",
+    "e2e": "gulp test:e2e",
+    "e2e:local": "cypress open --config baseUrl=http://localhost:8082",
     "lint": "eslint --ext .js,.ts,.tsx .",
     "lint:fix": "yarn lint --fix"
   }
