--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "lint": "lage lint --verbose",
     "lint:log": "FORCE_COLOR=0 yarn lint > lint.log 2>&1",
     "lint:log:lerna": "FORCE_COLOR=0 lerna run lint --stream --no-bail > lint.log 2>&1",
-    "perf": "cross-env PERF=true gulp perf --times=100",
-    "perf:debug": "cross-env PERF=true gulp perf:debug --debug",
+    "perf": "yarn workspace @fluentui/perf perf:test",
+    "perf:debug": "yarn workspace @fluentui/perf perf:test:debug",
     "postinstall": "node ./scripts/package-manager/postinstall.js",
     "preinstall": "node ./scripts/package-manager/use-yarn-please.js",
     "publish:beachball": "beachball publish -b origin/master --access public -y",
