--- a/packages/fluentui/perf/package.json
+++ b/packages/fluentui/perf/package.json
@@ -11,10 +11,17 @@
     "lodash": "^4.17.15",
     "minimatch": "^3.0.4"
   },
+  "devDependencies": {
+    "@fluentui/scripts-gulp": "*",
+    "@fluentui/scripts-babel": "*",
+    "@fluentui/scripts-monorepo": "*"
+  },
   "publishConfig": {
     "access": "public"
   },
   "scripts": {
+    "perf:test": "cross-env PERF=true gulp perf --times=100",
+    "perf:test:debug": "cross-env PERF=true gulp perf:debug --debug",
     "lint": "eslint --ext .js,.ts,.tsx .",
     "lint:fix": "yarn lint --fix"
   }
