--- a/packages/react-components/react-input/package.json
+++ b/packages/react-components/react-input/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@fluentui/react-field": "9.0.0-alpha.16",
+    "@fluentui/react-shared-contexts": "^9.1.5",
     "@fluentui/react-theme": "^9.1.5",
     "@fluentui/react-utilities": "^9.4.0",
     "@griffel/react": "^1.5.2",
