--- a/packages/react-components/react-spinbutton/package.json
+++ b/packages/react-components/react-spinbutton/package.json
@@ -38,6 +38,7 @@
     "@fluentui/react-field": "9.0.0-alpha.16",
     "@fluentui/react-icons": "^2.0.175",
     "@fluentui/react-input": "^9.2.13",
+    "@fluentui/react-shared-contexts": "^9.1.5",
     "@fluentui/react-theme": "^9.1.5",
     "@fluentui/react-utilities": "^9.4.0",
     "tslib": "^2.1.0"
