feat(web-components): bump tslib to 2.1. to align with rest of monorepo packages (#26457)
* feat(web-components): bump tslib to 2.1. to align with rest of monorepo packages

* chore: remove web-components from deps sync ignore list and fix repo violations

* generate change file

--- a/package.json
+++ b/package.json
@@ -385,7 +385,7 @@
     "source": [
       "package.json",
       "apps/!(react-18-tests-v8|react-18-tests-v9)/package.json",
-      "packages/!(web-components)/package.json",
+      "packages/web-components/package.json",
       "packages/react-components/*/package.json",
       "packages/fluentui/*/package.json",
       "scripts/package.json"
@@ -439,17 +439,6 @@
           "webpack",
           "webpack-bundle-analyzer",
           "yargs"
-        ]
-      },
-      {
-        "packages": [
-          "@fluentui/web-components"
-        ],
-        "dependencies": [
-          "mocha",
-          "ts-loader",
-          "tslib",
-          "webpack"
         ]
       },
       {
