--- a/packages/react-components/react-tree/package.json
+++ b/packages/react-components/react-tree/package.json
@@ -38,6 +38,7 @@
     "@fluentui/react-aria": "^9.3.6",
     "@fluentui/react-tabster": "^9.4.1",
     "@fluentui/react-portal": "^9.1.4",
+    "@fluentui/react-button": "^9.2.0",
     "@fluentui/keyboard-keys": "^9.0.1",
     "@fluentui/react-theme": "^9.1.5",
     "@fluentui/react-utilities": "^9.5.0",
