--- a/package.json
+++ b/package.json
@@ -154,7 +154,7 @@
     "@types/gulp-sourcemaps": "0.0.35",
     "@types/gulp-util": "3.0.36",
     "@types/jest": "26.0.24",
-    "@types/jest-axe": "3.5.3",
+    "@types/jest-axe": "3.5.5",
     "@types/jju": "1.4.1",
     "@types/json-schema": "^7.0.8",
     "@types/lerna-alias": "3.0.0",
@@ -255,7 +255,7 @@
     "ignore-not-found-export-webpack-plugin": "1.0.2",
     "imports-loader": "1.2.0",
     "jest": "26.6.3",
-    "jest-axe": "5.0.1",
+    "jest-axe": "6.0.1",
     "jest-cli": "26.6.3",
     "jest-environment-jsdom": "26.6.2",
     "jest-environment-node-single-context": "26.2.0",
@@ -374,7 +374,8 @@
     "@typescript-eslint/eslint-plugin": "4.22.0",
     "@typescript-eslint/experimental-utils": "4.22.0",
     "@typescript-eslint/parser": "4.22.0",
-    "@types/jest-axe/axe-core": "4.2.1",
+    "@types/jest-axe/axe-core": "4.4.3",
+    "jest-axe/axe-core": "4.4.3",
     "eslint": "7.25.0",
     "@mdx-js/loader/loader-utils": "~2.0.4"
   },
