--- a/packages/react-components/react-select/package.json
+++ b/packages/react-components/react-select/package.json
@@ -50,8 +50,7 @@
     "tag": "beta",
     "disallowedChangeTypes": [
       "major",
-      "minor",
-      "patch"
+      "prerelease"
     ]
   },
   "exports": {
