--- a/package.json
+++ b/package.json
@@ -124,8 +124,8 @@
     "@storybook/manager-webpack5": "6.5.15",
     "@storybook/react": "6.5.15",
     "@storybook/theming": "6.5.15",
-    "@swc/core": "1.2.220",
-    "@swc/helpers": "0.4.11",
+    "@swc/core": "1.3.30",
+    "@swc/helpers": "0.4.14",
     "@testing-library/dom": "8.11.3",
     "@testing-library/jest-dom": "5.16.1",
     "@testing-library/react": "12.1.2",
@@ -321,6 +321,7 @@
     "source-map-loader": "4.0.0",
     "storybook-addon-export-to-codesandbox": "0.8.2",
     "storybook-addon-performance": "0.16.1",
+    "storybook-addon-swc": "1.1.9",
     "storywright": "0.0.26-beta.1",
     "strip-ansi": "6.0.0",
     "style-loader": "2.0.0",
@@ -377,7 +378,8 @@
     "@types/jest-axe/axe-core": "4.4.3",
     "jest-axe/axe-core": "4.4.3",
     "eslint": "7.25.0",
-    "@mdx-js/loader/loader-utils": "~2.0.4"
+    "@mdx-js/loader/loader-utils": "~2.0.4",
+    "swc-loader": "^0.2.3"
   },
   "syncpack": {
     "prod": true,
