--- a/apps/public-docsite-v9/package.json
+++ b/apps/public-docsite-v9/package.json
@@ -22,7 +22,8 @@
     "@fluentui/scripts-tasks": "*"
   },
   "dependencies": {
-    "@fluentui/fluent2-theme": "^8.104.15",
+    "@fluentui/react-migration-v8-v9": "^9.1.1",
+    "@fluentui/react-migration-v0-v9": "9.0.0-alpha.0",
     "@fluentui/react": "^8.105.1",
     "@fluentui/react-northstar": "^0.66.0",
     "@fluentui/react-icons-northstar": "^0.66.0",
