--- a/packages/react-charting/package.json
+++ b/packages/react-charting/package.json
@@ -45,7 +45,7 @@
     "@types/d3-sankey": "^0.11.0",
     "@types/d3-scale": "^4.0.0",
     "@types/d3-selection": "1.4.1",
-    "@types/d3-shape": "^1.2.3",
+    "@types/d3-shape": "2.1.0",
     "@types/d3-time-format": "^2.1.0",
     "@types/d3-time": "^1.1.0",
     "@fluentui/set-version": "^8.2.5",
@@ -56,7 +56,7 @@
     "d3-sankey": "^0.12.3",
     "d3-scale": "^4.0.0",
     "d3-selection": "1.3.0",
-    "d3-shape": "^1.2.0",
+    "d3-shape": "2.1.0",
     "d3-time-format": "^2.1.3",
     "d3-time": "^1.1.0",
     "tslib": "^2.1.0"
