--- a/packages/fluentui/docs/package.json
+++ b/packages/fluentui/docs/package.json
@@ -1,26 +1,26 @@
 {
   "name": "@fluentui/docs",
-  "version": "0.66.0",
+  "version": "0.66.1",
   "private": true,
   "license": "MIT",
   "dependencies": {
     "@charlietango/use-script": "^2.1.1",
-    "@fluentui/ability-attributes": "^0.66.0",
-    "@fluentui/accessibility": "^0.66.0",
-    "@fluentui/code-sandbox": "^0.66.0",
-    "@fluentui/docs-components": "^0.66.0",
-    "@fluentui/react-bindings": "^0.66.0",
-    "@fluentui/react-builder": "^0.66.0",
-    "@fluentui/react-component-event-listener": "^0.66.0",
-    "@fluentui/react-component-ref": "^0.66.0",
-    "@fluentui/react-icons-northstar": "^0.66.0",
-    "@fluentui/react-northstar": "^0.66.0",
-    "@fluentui/react-northstar-emotion-renderer": "^0.66.0",
-    "@fluentui/react-northstar-fela-renderer": "^0.66.0",
-    "@fluentui/react-northstar-prototypes": "^0.66.0",
-    "@fluentui/react-northstar-styles-renderer": "^0.66.0",
-    "@fluentui/react-telemetry": "^0.66.0",
-    "@fluentui/styles": "^0.66.0",
+    "@fluentui/ability-attributes": "^0.66.1",
+    "@fluentui/accessibility": "^0.66.1",
+    "@fluentui/code-sandbox": "^0.66.1",
+    "@fluentui/docs-components": "^0.66.1",
+    "@fluentui/react-bindings": "^0.66.1",
+    "@fluentui/react-builder": "^0.66.1",
+    "@fluentui/react-component-event-listener": "^0.66.1",
+    "@fluentui/react-component-ref": "^0.66.1",
+    "@fluentui/react-icons-northstar": "^0.66.1",
+    "@fluentui/react-northstar": "^0.66.1",
+    "@fluentui/react-northstar-emotion-renderer": "^0.66.1",
+    "@fluentui/react-northstar-fela-renderer": "^0.66.1",
+    "@fluentui/react-northstar-prototypes": "^0.66.1",
+    "@fluentui/react-northstar-styles-renderer": "^0.66.1",
+    "@fluentui/react-telemetry": "^0.66.1",
+    "@fluentui/styles": "^0.66.1",
     "@hot-loader/react-dom": "17.0.2",
     "@mdx-js/react": "^1.5.5",
     "classnames": "^2.2.6",
@@ -51,15 +51,15 @@
   },
   "devDependencies": {
     "@fluentui/eslint-plugin": "*",
+    "@fluentui/scripts-babel": "*",
+    "@fluentui/scripts-gulp": "*",
     "@types/classnames": "^2.2.9",
     "@types/color": "^3.0.0",
     "@types/faker": "^4.1.3",
     "@types/react-custom-scrollbars": "^4.0.5",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-virtualized": "^9.21.8",
-    "@types/react-window": "^1.8.2",
-    "@fluentui/scripts-gulp": "*",
-    "@fluentui/scripts-babel": "*"
+    "@types/react-window": "^1.8.2"
   },
   "publishConfig": {
     "access": "public"
