Initialize package for storybook full source code babel preset (#26781)
* Initialize package for storybook full source code babel preset

Preparing to move storybook codesandbox code to monorepo

Addresses #26780

* api md

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,6 +14,9 @@
     "baseUrl": ".",
     "paths": {
       "@fluentui/babel-preset-global-context": ["packages/react-components/babel-preset-global-context/src/index.ts"],
+      "@fluentui/babel-preset-storybook-full-source": [
+        "packages/react-components/babel-preset-storybook-full-source/src/index.ts"
+      ],
       "@fluentui/global-context": ["packages/react-components/global-context/src/index.ts"],
       "@fluentui/keyboard-key": ["packages/keyboard-key/src/index.ts"],
       "@fluentui/keyboard-keys": ["packages/react-components/keyboard-keys/src/index.ts"],
