--- a/scripts/storybook/package.json
+++ b/scripts/storybook/package.json
@@ -11,6 +11,7 @@
     "type-check": "tsc -b tsconfig.json"
   },
   "dependencies": {
-    "@fluentui/scripts-monorepo": "*"
+    "@fluentui/scripts-monorepo": "*",
+    "@fluentui/babel-preset-storybook-full-source": "*"
   }
 }
