--- a/scripts/beachball/base.config.json
+++ b/scripts/beachball/base.config.json
@@ -5,10 +5,14 @@
   "ignorePatterns": [
     "**/*.{shot,snap}",
     "**/*.{test,spec}.{ts,tsx}",
-    "**/*.stories.tsx",
+    "**/*.stories.{ts,tsx}",
     "**/.eslintrc.*",
     "**/__fixtures__/**",
     "**/__mocks__/**",
+    "**/docs/**",
+    "**/stories/**",
+    "**/.storybook/**",
+    "**/bundle-size/**",
     "**/common/isConformant.ts",
     "**/src/testing/**",
     "**/config/tests.js",
