chore: enable build-less DX for cross library storybooks and VR tests and improve build speeds (#26559)
* chore(fluentui/docs): enable build-less setup for VR tests

* chore(apps/vr-tests-react-components): unify storybook setup with rest of VR apps

* chore(apps/stress-test): enable build-less setup (except web-components)

* chore(react-migration-v8-v9): enable build-less DX for storybook

* chore(react-migration-v0-v9): enable build-less DX for storybook

* perf(apps/vr-tests): unify storybook setup with rest of VR apps and improve build speed

* generate change files

* chore: fix missing path aliases in v0,v8 tsconfigs

* chore(public-docsite-v9): normalize dependencies in package.json

--- a/packages/fluentui/docs/package.json
+++ b/packages/fluentui/docs/package.json
@@ -53,6 +53,7 @@
     "@fluentui/eslint-plugin": "*",
     "@fluentui/scripts-babel": "*",
     "@fluentui/scripts-gulp": "*",
+    "@fluentui/scripts-storybook": "*",
     "@types/classnames": "^2.2.9",
     "@types/color": "^3.0.0",
     "@types/faker": "^4.1.3",
