--- a/packages/react-components/react-storybook-addon-codesandbox/tsconfig.lib.json
+++ b/packages/react-components/react-storybook-addon-codesandbox/tsconfig.lib.json
@@ -2,12 +2,12 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "noEmit": false,
-    "lib": ["ES2019"],
+    "lib": ["ES2019", "DOM"],
     "declaration": true,
     "declarationDir": "../../../dist/out-tsc/types",
     "outDir": "../../../dist/out-tsc",
     "inlineSources": true,
-    "types": ["static-assets", "environment", "node"],
+    "types": ["static-assets", "environment"],
     "module": "CommonJS"
   },
   "exclude": ["**/*.spec.ts", "**/*.spec.tsx", "**/*.test.ts", "**/*.test.tsx"],
