--- a/apps/public-docsite-v9/package.json
+++ b/apps/public-docsite-v9/package.json
@@ -29,6 +29,7 @@
     "@fluentui/react-icons-northstar": "^0.66.1",
     "@fluentui/react-components": "^9.15.5",
     "@fluentui/react-storybook-addon": "9.0.0-rc.1",
+    "@fluentui/react-storybook-addon-codesandbox": "9.0.0-alpha.0",
     "@griffel/react": "^1.5.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
