Remove codeowners from change files (#26935)
Update the change directory to have no codeowner specified. The change directory contains files from every package, and doesn't have a specific owner. Other code changes in a PR will still require owner approval.

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -24,6 +24,9 @@
 *.sh @microsoft/fluentui-react-build
 *.yml @microsoft/fluentui-react-build
 
+#### Change files (no owner)
+/change
+
 #### Build folders
 /.codesandbox @microsoft/fluentui-react-build
 /.devcontainer @microsoft/fluentui-react-build
