chore: make lint task run without need of build (#26872)
* chore: make lint task run without need of build

* chore: re-enable AMD import checks for only mixed and v8 packages

* generate change files

* feat(scripts-tasks): unify monaco-editor task setup and reduce public api surface

* Update scripts/tasks/src/lint-imports.ts

Co-authored-by: Makoto Morimoto <Humberto.Morimoto@microsoft.com>

---------

Co-authored-by: Makoto Morimoto <Humberto.Morimoto@microsoft.com>

--- a/apps/public-docsite-resources/package.json
+++ b/apps/public-docsite-resources/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "build": "just-scripts build",
     "bundle": "just-scripts bundle",
-    "lint": "just-scripts lint",
+    "lint": "eslint --ext .js,.ts,.tsx ./src",
     "just": "just-scripts",
     "clean": "just-scripts clean",
     "code-style": "just-scripts code-style",
