--- a/packages/react-components/react-card/package.json
+++ b/packages/react-components/react-card/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fluentui/react-card",
-  "version": "9.0.0-beta.47",
+  "version": "9.0.0-rc.0",
   "private": false,
   "description": "Card container components for Fluent UI React.",
   "main": "lib-commonjs/index.js",
