--- a/packages/react-components/react-migration-v0-v9/package.json
+++ b/packages/react-components/react-migration-v0-v9/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@fluentui/react-theme": "^9.1.5",
+    "@fluentui/react-icons": "^2.0.175",
     "@fluentui/react-utilities": "^9.6.0",
     "@griffel/react": "^1.5.2",
     "tslib": "^2.1.0",
