feat(react-tree): adds useFlatTreeItems hook to introduce flattening (#26856)
* feat(react-tree): adds useFlatTreeItems hook to introduce flattening

* feat: adds flattenTree helper methods

* chore: updates API

* chore: creates ImmutableSet instead of using arrays for openItems

* chore: adds Virtualization story

* chore: improves useFlatTreeItems internal algorithm to reduce iterations

* chore: improves performance for useFlatTreeItems

* chore: fix react-window version

* chore: update useFlatTreeItem story

* chore: add modifications per comments

* chore: removes flattenTreeFromElements

--- a/packages/react-components/react-tree/package.json
+++ b/packages/react-components/react-tree/package.json
@@ -29,7 +29,8 @@
     "@fluentui/react-conformance": "*",
     "@fluentui/react-conformance-griffel": "9.0.0-beta.19",
     "@fluentui/scripts-api-extractor": "*",
-    "@fluentui/scripts-tasks": "*"
+    "@fluentui/scripts-tasks": "*",
+    "react-window": "^1.8.6"
   },
   "dependencies": {
     "@fluentui/react-context-selector": "^9.1.10",
