chore: migrate monorepo to jest 28 (#26958)
* chore: migrate monorepo to jest 28

* feat(test-utilities): move private test/ helpers from utilities package to make test pass with jest 28

* generate changefiles

* chore: bump/dedupe babel family of packages

--- a/packages/set-version/tsconfig.json
+++ b/packages/set-version/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "es5",
     "outDir": "lib",
     "module": "commonjs",
-    "lib": ["es5", "dom"],
+    "lib": ["ES5", "ES2015.Collection", "dom"],
     "declaration": true,
     "sourceMap": true,
     "importHelpers": true,
