--- a/packages/keyboard-key/tsconfig.json
+++ b/packages/keyboard-key/tsconfig.json
@@ -4,6 +4,7 @@
     "outDir": "dist",
     "target": "es5",
     "module": "commonjs",
+    "lib": ["ES5", "ES2015.Collection", "DOM"],
     "jsx": "react",
     "declaration": true,
     "sourceMap": true,
@@ -15,7 +16,6 @@
     "noImplicitAny": true,
     "moduleResolution": "node",
     "preserveConstEnums": true,
-    "lib": ["es5", "dom"],
     "types": ["jest"],
     "isolatedModules": true
   },
