--- a/packages/merge-styles/tsconfig.json
+++ b/packages/merge-styles/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "es5",
     "outDir": "lib",
     "module": "commonjs",
-    "lib": ["es5", "dom"],
+    "lib": ["ES5", "ES2015.Collection", "dom"],
     "jsx": "react",
     "declaration": true,
     "sourceMap": true,
