--- a/packages/react-components/react-migration-v0-v9/.eslintrc.json
+++ b/packages/react-components/react-migration-v0-v9/.eslintrc.json
@@ -1,4 +1,17 @@
 {
   "extends": ["plugin:@fluentui/eslint-plugin/react"],
-  "root": true
+  "root": true,
+  "overrides": [
+    {
+      "files": "**/*.stories.{tsx,ts}",
+      "rules": {
+        "no-restricted-imports": [
+          "error",
+          {
+            "patterns": ["src/"]
+          }
+        ]
+      }
+    }
+  ]
 }
