feat(scripts-storybook): unify workspace addon loading for dev and prod builds (#27006)
* chore: disable manager chache on vr storybook production builds

* chore(react-components): remove unnecessary devDeps on workspace addon

* feat(scripts-storybook): unify workspace addon loading for dev and prod builds

* ci(vr): don't manually build workspace addon prior to run build-storybook for v9 tests

* generate changefile

* ci(vr): don't manually build v0 prior to run build-storybook for v0 tests

--- a/azure-pipelines.vrt-pr.yml
+++ b/azure-pipelines.vrt-pr.yml
@@ -63,7 +63,7 @@ jobs:
           fluentVersion: v9
           vrTestPackageName: '@fluentui/vr-tests-react-components'
           vrTestPackagePath: 'apps/vr-tests-react-components'
-          shouldBuildstorybookaddon: true
+          shouldBuildstorybookaddon: false
 
       - powershell: |
           $url = "https://dev.azure.com/uifabric/fabricpublic/_apis/build/builds?definitions=$env:BASELINE_PIPELINE_ID&statusFilter=completed&resultFilter=succeeded&queryOrder=finishTimeDescending&`$top=1"
@@ -227,7 +227,7 @@ jobs:
           vrTestPackageName: '@fluentui/docs'
           vrTestPackagePath: 'packages/fluentui/docs'
           shouldBuildstorybookaddon: false
-          shouldBuildNorthstar: true
+          shouldBuildNorthstar: false
 
       - powershell: |
           $url = "https://dev.azure.com/uifabric/fabricpublic/_apis/build/builds?definitions=$env:BASELINE_PIPELINE_ID&statusFilter=completed&resultFilter=succeeded&queryOrder=finishTimeDescending&`$top=1"
