--- a/packages/fluentui/docs/package.json
+++ b/packages/fluentui/docs/package.json
@@ -67,11 +67,13 @@
   },
   "scripts": {
     "build": "gulp build:docs",
-    "build:storybook": "build-storybook -o dist/storybook",
+    "prebuild:storybook": "lage build:info --to @fluentui/react-northstar @fluentui/react-component-ref @fluentui/react-bindings",
+    "build:storybook": "build-storybook --no-manager-cache -o dist/storybook",
     "lint": "eslint --ext .js,.ts,.tsx .",
     "lint:fix": "yarn lint --fix",
     "start": "gulp docs",
     "start:profile": "cross-env NODE_ENV=production PERF=true gulp docs",
+    "prestart:storybook": "lage build:info --to @fluentui/react-northstar @fluentui/react-component-ref @fluentui/react-bindings",
     "start:storybook": "start-storybook",
     "vr:build": "yarn build:storybook",
     "vr:test": "storywright  --browsers chromium --url dist/storybook --destpath dist/screenshots --waitTimeScreenshot 500 --concurrency 4 --headless true"
