--- a/packages/react-components/react-button/package.json
+++ b/packages/react-components/react-button/package.json
@@ -36,6 +36,7 @@
     "@fluentui/keyboard-keys": "^9.0.1",
     "@fluentui/react-aria": "^9.3.10",
     "@fluentui/react-icons": "^2.0.175",
+    "@fluentui/react-shared-contexts": "^9.2.0",
     "@fluentui/react-tabster": "^9.5.3",
     "@fluentui/react-theme": "^9.1.5",
     "@fluentui/react-utilities": "^9.6.0",
