Updating Fluent 2 Theme TextField styles (#27098)
* adding IExtendedTypes and updating textField focus

* change file

* Exports IExtendedSemanticColors

* don't change the default demo theme

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,5 +74,5 @@
   "typescript.preferences.importModuleSpecifierEnding": "index",
   "typescript.tsdk": "./node_modules/typescript/lib",
   "typescript.reportStyleChecksAsWarnings": false,
-  "cSpell.words": ["beachball", "fluentui", "griffel", "spinbutton", "tabster"]
+  "cSpell.words": ["beachball", "borderless", "fluentui", "griffel", "spinbutton", "tabster"]
 }
