Custom style react-badge (#27061)

--- a/packages/react-components/react-badge/package.json
+++ b/packages/react-components/react-badge/package.json
@@ -33,9 +33,10 @@
   },
   "dependencies": {
     "@fluentui/react-icons": "^2.0.175",
-    "@griffel/react": "^1.5.2",
+    "@fluentui/react-shared-contexts": "^9.2.0",
     "@fluentui/react-theme": "^9.1.5",
     "@fluentui/react-utilities": "^9.6.0",
+    "@griffel/react": "^1.5.2",
     "tslib": "^2.1.0"
   },
   "peerDependencies": {
