--- a/packages/react-components/react-combobox/package.json
+++ b/packages/react-components/react-combobox/package.json
@@ -38,6 +38,7 @@
     "@fluentui/react-icons": "^2.0.175",
     "@fluentui/react-portal": "^9.1.9",
     "@fluentui/react-positioning": "^9.5.0",
+    "@fluentui/react-shared-contexts": "^9.2.0",
     "@fluentui/react-theme": "^9.1.5",
     "@fluentui/react-utilities": "^9.6.0",
     "@griffel/react": "^1.5.2",
