fix(react-datepicker-compat): Fix popover trigger issues with input (#27210)
* fixing space issue and delete issue

* removing comment and adding back ignore comment

* adding possible input fix

* adding disable line

* fixing positioning

* cleaning imports

* changing fix

* removing unused trigger render function for input

* fix issue with ordering

* fix click issue

* fixing merge issues

--- a/packages/react-components/react-datepicker-compat/package.json
+++ b/packages/react-components/react-datepicker-compat/package.json
@@ -42,6 +42,7 @@
     "@fluentui/react-shared-contexts": "^9.3.1",
     "@fluentui/react-tabster": "^9.6.0",
     "@fluentui/react-popover": "^9.5.4",
+    "@fluentui/react-positioning": "^9.5.5",
     "@fluentui/react-input": "^9.4.4",
     "@griffel/react": "^1.5.2",
     "tslib": "^2.1.0"
